partman-base (114) UNRELEASED; urgency=low

  * Move definitions.sh to ./lib/base.sh. Temporarily provide a symlink to the
    old location to ease the transition.

 -- Frans Pop <fjp@debian.org>  Wed, 05 Dec 2007 14:18:30 +0100

partman-base (113) unstable; urgency=low

  [ Frans Pop ]
  * Revert support for erasing encrypted LVM volumes introduced in (106).
    There are too many problems with it and starting fresh seems better
    than stacking change on change to fix it.
  * Don't link against libdl.so.2; according to dpkg-shlibdeps it's not used.

  [ Max Vozeler ]
  * definitions.sh: Provide commit_changes for other partman packages to use
    when they need to commit pending changes to disk.

  [ Updated translations ]
  * Dzongkha (dz.po) by Jurmey Rabgay
  * Malayalam (ml.po) by Praveen|പ്രവീണ്‍ A|എ

 -- Frans Pop <fjp@debian.org>  Wed, 05 Dec 2007 13:14:53 +0100

partman-base (112) unstable; urgency=low

  * Add support for the Orion (ARM) platform.

 -- Martin Michlmayr <tbm@cyrius.com>  Thu, 29 Nov 2007 09:19:46 +0100

partman-base (111) unstable; urgency=low

  * init.d/umount-target: also unmount /dev/.static/dev/ which may have
    /target/dev/ mounted on it by base-installer (>= 1.85).

  [ Updated translations ]
  * Belarusian (be.po) by Hleb Rubanau
  * German (de.po) by Jens Seidel
  * Esperanto (eo.po) by Serge Leblanc
  * Korean (ko.po) by Sunjae Park
  * Norwegian Bokmål (nb.po) by Hans Fredrik Nordhaug
  * Romanian (ro.po) by Eddy Petrișor

 -- Frans Pop <fjp@debian.org>  Mon, 19 Nov 2007 11:44:31 +0100

partman-base (110) unstable; urgency=low

  [ Colin Watson ]
  * Resolve symlinks before looking up devices in /proc/swaps.
  * Minor read_list optimisation using a ${parameter:+word} expansion.
  * Optimise humandev cciss handling a little, fixing a shell syntax error
    along the way that created a file called "15" rather than checking
    whether $lun was greater than 15.