@@ -2,8 +2,9 @@ partman-base (114) UNRELEASED; urgency=low
 
   * Move definitions.sh to ./lib/base.sh. Temporarily provide a symlink to the
     old location to ease the transition.
+  * base.sh: add memfree function which returns free memory in kB.
 
- -- Frans Pop <fjp@debian.org>  Wed, 05 Dec 2007 14:18:30 +0100
+ -- Frans Pop <fjp@debian.org>  Wed, 05 Dec 2007 16:55:43 +0100
 
 partman-base (113) unstable; urgency=low
 
